test/sparse/bradc/denseIRV.good
denseIRV.chpl:4: error: only sparse arrays have an IRV
